--- a/.github/workflows/api-lint.yml
+++ b/.github/workflows/api-lint.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v6
         with:
-          go-version: stable
+          go-version: 1.25.1
 
       - name: Run golangci-lint
         uses: golangci/golangci-lint-action@v8
