--- a/.github/workflows/pr-labeler.yml
+++ b/.github/workflows/pr-labeler.yml
@@ -1,12 +1,13 @@
 name: Pull request labeler
+
 on:
-- pull_request_target
+  pull_request_target:
 
 jobs:
   labeler:
+    runs-on: ubuntu-latest
     permissions:
       contents: read
       pull-requests: write
-    runs-on: ubuntu-latest
     steps:
-    - uses: actions/labeler@v6
+      - uses: actions/labeler@v6
